reusalbe fn to move

--- a/code/Mark and Move ROI on Image.ipynb
+++ b/code/Mark and Move ROI on Image.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "efd41279-b8a3-42be-b858-ec876a7f51dc",
    "metadata": {},
    "outputs": [],
@@ -25,6 +25,33 @@
     "\n",
     "# Transparency factor\n",
     "alpha = 0.6  # 0 = fully transparent, 1 = fully opaque\n",
+    "\n",
+    "def end_move(x, y, alpha_img, alpha_roi):\n",
+    "    global rect_start, rect_end, dragging, moving, roi, offset, img, clone\n",
+    "    \n",
+    "    # Move ROI with transparency\n",
+    "    img = clone.copy()\n",
+    "    dx = x - offset[0]\n",
+    "    dy = y - offset[1]\n",
+    "    offset = (x, y)\n",
+    "    new_rect = (rect_start[0] + dx, rect_start[1] + dy,\n",
+    "                rect_end[0] + dx, rect_end[1] + dy)\n",
+    "\n",
+    "    x1, y1, x2, y2 = new_rect\n",
+    "    # Clamp coordinates to image boundaries\n",
+    "    h, w = img.shape[:2]\n",
+    "    x1 = max(0, min(x1, w - roi.shape[1]))\n",
+    "    y1 = max(0, min(y1, h - roi.shape[0]))\n",
+    "    x2, y2 = x1 + roi.shape[1], y1 + roi.shape[0]\n",
+    "\n",
+    "    # Blend ROI with background\n",
+    "    roi_resized = roi.copy()\n",
+    "    blended = cv2.addWeighted(img[y1:y2, x1:x2], alpha_img, roi_resized, alpha_roi, 0)\n",
+    "\n",
+    "    img[y1:y2, x1:x2] = blended\n",
+    "    cv2.rectangle(img, (x1, y1), (x2, y2), (0, 0, 255), 2)\n",
+    "    rect_start = (x1, y1)\n",
+    "    rect_end = (x2, y2)\n",
     "\n",
     "def mouse_events(event, x, y, flags, param):\n",
     "    global rect_start, rect_end, dragging, moving, roi, offset, img, clone\n",
@@ -57,54 +84,11 @@
     "\n",
     "    elif event == cv2.EVENT_MOUSEMOVE and moving:\n",
     "        # Move ROI with transparency\n",
-    "        img = clone.copy()\n",
-    "        dx = x - offset[0]\n",
-    "        dy = y - offset[1]\n",
-    "        offset = (x, y)\n",
-    "        new_rect = (rect_start[0] + dx, rect_start[1] + dy,\n",
-    "                    rect_end[0] + dx, rect_end[1] + dy)\n",
-    "\n",
-    "        x1, y1, x2, y2 = new_rect\n",
-    "        # Clamp coordinates to image boundaries\n",
-    "        h, w = img.shape[:2]\n",
-    "        x1 = max(0, min(x1, w - roi.shape[1]))\n",
-    "        y1 = max(0, min(y1, h - roi.shape[0]))\n",
-    "        x2, y2 = x1 + roi.shape[1], y1 + roi.shape[0]\n",
-    "\n",
-    "        # Blend ROI with background\n",
-    "        roi_resized = roi.copy()\n",
-    "        blended = cv2.addWeighted(img[y1:y2, x1:x2], 1 - alpha, roi_resized, alpha, 0)\n",
-    "\n",
-    "        img[y1:y2, x1:x2] = blended\n",
-    "        cv2.rectangle(img, (x1, y1), (x2, y2), (0, 0, 255), 2)\n",
-    "        rect_start = (x1, y1)\n",
-    "        rect_end = (x2, y2)\n",
+    "        end_move(x, y, 1-alpha, alpha)\n",
     "\n",
     "    elif event == cv2.EVENT_RBUTTONUP:\n",
     "        moving = False\n",
-    "        # Move ROI with transparency\n",
-    "        img = clone.copy()\n",
-    "        dx = x - offset[0]\n",
-    "        dy = y - offset[1]\n",
-    "        offset = (x, y)\n",
-    "        new_rect = (rect_start[0] + dx, rect_start[1] + dy,\n",
-    "                    rect_end[0] + dx, rect_end[1] + dy)\n",
-    "\n",
-    "        x1, y1, x2, y2 = new_rect\n",
-    "        # Clamp coordinates to image boundaries\n",
-    "        h, w = img.shape[:2]\n",
-    "        x1 = max(0, min(x1, w - roi.shape[1]))\n",
-    "        y1 = max(0, min(y1, h - roi.shape[0]))\n",
-    "        x2, y2 = x1 + roi.shape[1], y1 + roi.shape[0]\n",
-    "        \n",
-    "         # Blend ROI with background\n",
-    "        roi_resized = roi.copy()\n",
-    "        blended = cv2.addWeighted(img[y1:y2, x1:x2], 0, roi_resized, 1, 0)\n",
-    "\n",
-    "        img[y1:y2, x1:x2] = blended\n",
-    "        cv2.rectangle(img, (x1, y1), (x2, y2), (0, 0, 255), 2)\n",
-    "        rect_start = (x1, y1)\n",
-    "        rect_end = (x2, y2)\n",
+    "        end_move(x, y, 0, 1)\n",
     "\n",
     "# Create window\n",
     "cv2.namedWindow(\"Move ROI with Transparency\")\n",
